--- a/Generated_File/App.config
+++ b/Generated_File/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Generated_File.Properties.Settings.BIKESTORESConnectionString"
+            connectionString="Data Source=.;Initial Catalog=BIKESTORES;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
