--- a/Generated_File/packages.config
+++ b/Generated_File/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Devart.Data" version="5.0.2478" targetFramework="net472" />
+  <package id="Devart.Data.MySql" version="8.17.1686" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
   <package id="Syncfusion.Core.WinForms" version="18.1.0.59" targetFramework="net472" />
   <package id="Syncfusion.Data.WinForms" version="18.1.0.59" targetFramework="net472" />
   <package id="Syncfusion.DataSource.WinForms" version="18.1.0.59" targetFramework="net472" />
@@ -9,4 +12,7 @@
   <package id="Syncfusion.SfInput.WinForms" version="18.1.0.59" targetFramework="net472" />
   <package id="Syncfusion.SfListView.WinForms" version="18.1.0.59" targetFramework="net472" />
   <package id="Syncfusion.Shared.Base" version="18.1.0.59" targetFramework="net472" />
+  <package id="System.Diagnostics.PerformanceCounter" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
 </packages>
