--- a/Generated_File/packages.config
+++ b/Generated_File/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ActiveQueryBuilder.Core" version="3.6.11.1168" targetFramework="net472" />
+  <package id="ActiveQueryBuilder.View.WinForms" version="3.6.11.1168" targetFramework="net472" />
+  <package id="AdvancedWizard" version="4.0.0.0" targetFramework="net472" />
+  <package id="AeroWizard" version="2.2.7" targetFramework="net472" />
   <package id="Devart.Data" version="5.0.2478" targetFramework="net472" />
   <package id="Devart.Data.MySql" version="8.17.1686" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
+  <package id="Sequel" version="2.0.0" targetFramework="net472" />
   <package id="Syncfusion.Core.WinForms" version="18.1.0.59" targetFramework="net472" />
   <package id="Syncfusion.Data.WinForms" version="18.1.0.59" targetFramework="net472" />
   <package id="Syncfusion.DataSource.WinForms" version="18.1.0.59" targetFramework="net472" />
