--- a/Generated_File/App.config
+++ b/Generated_File/App.config
@@ -12,4 +12,17 @@
     <DbProviderFactories> 
       <add name="dotConnect for MySql" invariant="Devart.Data.MySql" description="Devart dotConnect for MySql" type="Devart.Data.MySql.MySqlProviderFactory, Devart.Data.MySql, Version=8.17.1686.0, Culture=neutral, PublicKeyToken=09af7300eec23701" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Devart.Data" publicKeyToken="09af7300eec23701" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.2333.0" newVersion="5.0.2333.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Devart.Data.MySql" publicKeyToken="09af7300eec23701" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.12.1307.0" newVersion="8.12.1307.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
